k8s/mirror/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tx-hero-transaction-crawler-svc
  labels:
    app: tx-hero-transaction-crawler-svc
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tx-hero-transaction-crawler
